# AoC2015

./: .gitignore  AoC2015.cabal  README.md
Day1/: floors-2.hs  floors.hs
Day2/: wrappingPaper.hs  wrappingRibbon.hs
Day3/: houses-2.hs  houses.hs
Day4/: advent-coins.hs
Day5/: nice-words.hs  nicer-words.hs
Day6/: lights-brightness.js  lights.hs
Day7/: package-lock.json  wires.hs  wires.js
src/Day1/: Floors.hs  Floors2.hs
src/Day2/: WrappingPaper.hs  WrappingRibbon.hs
src/Day3/: Houses.hs  Houses2.hs
src/Day4/: AdventCoins.hs
src/Day5/: NiceWords.hs  NicerWords.hs
src/Day6/: Lights.hs  lights-brightness.js  lights.js
src/Day7/: Wires.hs  package-lock.json  package.json  wires.js
